# farkle

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/actions/run-tests/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  unit-tests.yml
farkle/: bot.py  bots.py  core.py
tests/: conftest.py  test_bot.py  test_bots.py  test_core.py  test_parameters.json
