[project]
name = 'farkle'
dynamic = [
  'version'
]
description = 'Farkle engine'
# readme = 'README.md'
authors = [
  { name = 'Collin Cunningham', email='na@na.org' },
]
# license = {file = 'LICENSE'}
requires-python = '>=3.10'
dependencies = [
  "numpy>=1.23.2",
]
classifiers = [
    'Development Status :: 3 - Development',
    'Environment :: Console',
    'Operating System :: Linux/Max',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Game'
]

[project.optional-dependencies]
dev = ['build', 'pre-commit', 'pytest', 'pytest-cov', 'mypy']

[tool.setuptools.packages.find]
include = ["farkle", "farkle.*"]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "farkle/_version.py"
fallback_version = "0.1.0"

[tool.black]
target-version = ['py310']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
unfixable = []

select = [
  "F",
  "E", "W",
  "YTT",
  "B",
  "Q",
  "T10",
  "INT",
  "PLC", "PLE", "PLR", "PLW",
  "PIE",
  "PYI",
  "TID",
  "ISC",
  "TCH",
  "C4",
  "RUF",
  "S102"
]

ignore = [
  # do not assign a lambda expression, use a def
  "E731",
  # controversial
  "B006",
  "B007",
  "B008",
  # setattr is used to side-step mypy
  "B009",
  # getattr is used to side-step mypy
  "B010",
  # false positives
  "B019",
  # Too many arguments to function call
  "PLR0913",
  # Too many returns
  "PLR0911",
  # Too many branches
  "PLR0912",
  # Too many statements
  "PLR0915",
  # Redefined loop name
  "PLW2901",
  # Docstrings should not be included in stubs
  "PYI021",
  # Use typing_extensions.TypeAlias for type aliases
  # "PYI026",  # not yet implemented
  # Use "collections.abc.*" instead of "typing.*" (PEP 585 syntax)
  # "PYI027",  # not yet implemented
  # while int | float can be shortened to float, the former is more explicit
  # "PYI041",  # not yet implemented
  # Magic number
  "PLR2004",
]

[tool.isort]
profile = "black"
combine_as_imports = true
force_grid_wrap = 3
force_sort_within_sections = true

[tool.coverage.run]
branch = true
omit = ["farkle/_version.py"]
source = ["farkle"]

[tool.coverage.report]
ignore_errors = false
show_missing = true
omit = ["farkle/_version.py"]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
